Cockatrice Change Log

==================== Cockatrice 0.6.1 ====================

December 25, 2018

* Fix document build error


==================== Cockatrice 0.6.0 ====================

December 25, 2018

* Synchronize the latest index from the leader node
* Print default values in CLI usage
* Force log compaction
* Expose snapshot
* Add serializer and deserializer
* Disable ram storage
* Add Cluster API